--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -19,6 +19,8 @@ psycopg2 = "^2.9.9"
 psycopg2-binary = "^2.9.9"
 celery = "^5.3.6"
 raven = "^6.10.0"
+alembic = "^1.13.0"
+ujson = "^5.9.0"
 
 
 [build-system]
@@ -28,3 +30,4 @@ build-backend = "poetry.core.masonry.api"
 [virtualenvs]
 create = true
 in-project = true
+path = ".venv"
