--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -17,7 +17,7 @@ tenacity = "^8.2.3"
 psycopg = "^3.1.15"
 psycopg2 = "^2.9.9"
 psycopg2-binary = "^2.9.9"
-celery = "^5.3.6"
+celery = {extras = ["redis"], version = "^5.3.6"}
 raven = "^6.10.0"
 alembic = "^1.13.0"
 ujson = "^5.9.0"
