--- a/src/.env
+++ b/src/.env
@@ -47,7 +47,7 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123456
-POSTGRES_DB=postgres
+POSTGRES_DB=mesgpt
 #
 # # PgAdmin
 # PGADMIN_LISTEN_PORT=5050
