--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -23,6 +23,9 @@ alembic = "^1.13.0"
 ujson = "^5.9.0"
 eventlet = "^0.33.3"
 gevent = "^23.9.1"
+langchain = "^0.0.352"
+langchain-google-genai = "^0.0.5"
+pillow = "^10.1.0"
 
 
 [build-system]
