feature: add langchain for model memory

--- a/src/.env
+++ b/src/.env
@@ -3,6 +3,7 @@ HOST=0.0.0.0
 PORT=8000
 RELOAD=True
 WORKERS_COUNT=1
+API_VERSION=v1
 
 
 # Update this with your app domain
@@ -61,4 +62,4 @@ RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
 
 # LLM env
-GOOGLE_API_KEY=""
+GOOGLE_API_KEY="AIzaSyBIjYO3ATyoH-DkANqNWA_suDVbzTyV1BM"
