--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -26,6 +26,7 @@ gevent = "^23.9.1"
 langchain = "^0.0.352"
 langchain-google-genai = "^0.0.5"
 pillow = "^10.1.0"
+flower = "^2.0.1"
 
 
 [build-system]
