--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -27,6 +27,8 @@ langchain = "^0.0.352"
 langchain-google-genai = "^0.0.5"
 pillow = "^10.1.0"
 flower = "^2.0.1"
+openai = "^1.9.0"
+langchain-openai = "^0.0.3"
 
 
 [build-system]
