--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -29,6 +29,8 @@ pillow = "^10.1.0"
 flower = "^2.0.1"
 openai = "^1.9.0"
 langchain-openai = "^0.0.3"
+flake8 = "^7.0.0"
+pre-commit = "^3.6.0"
 
 
 [build-system]
