--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 services:
   db:
     image: postgres:15
@@ -7,17 +7,17 @@ services:
     env_file:
       - .env
     environment:
-        - POSTGRES_DB=${POSTGRES_DB}
-        - POSTGRES_USER=${POSTGRES_USER}
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - 5432:5432
     restart: always
     healthcheck:
-        test: ['CMD-SHELL', 'pg_isready', '-U', '${POSTGRES_USER}']
-        interval: 10s
-        timeout: 5s
-        retries: 5
+      test: ["CMD-SHELL", "pg_isready", "-U", "${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   pgadmin:
     image: dpage/pgadmin4:5.7
@@ -64,62 +64,62 @@ services:
       timeout: 3s
       retries: 50
 
-#  celeryworker:
-#    image: ${DOCKER_IMAGE_CELERYWORKER}:latest
-#    depends_on:
-#      - db
-#      - rabbitmq
-#      - redis
-#    env_file:
-#      - .env
-#    environment:
-#      - SERVER_NAME=${DOMAIN?Variable not set}
-#      - SERVER_HOST=https://${DOMAIN?Variable not set}
-#    build:
-#      context: ./
-#      dockerfile: ./docker/celeryworker.dockerfile
-#      args:
-#        INSTALL_DEV: ${INSTALL_DEV-false}
-#
-#  celeryflower:
-#    image: ${DOCKER_IMAGE_FLOWER}:latest
-#    depends_on:
-#      - db
-#      - rabbitmq
-#      - redis
-#    ports:
-#      - 5555:5555
-#    env_file:
-#      - .env
-#    environment:
-#      - SERVER_NAME=${DOMAIN?Variable not set}
-#      - SERVER_HOST=https://${DOMAIN?Variable not set}
-#    build:
-#      context: ./
-#      dockerfile: ./docker/celeryworker.dockerfile
-#      args:
-#        INSTALL_DEV: ${INSTALL_DEV-false}
-#    command: ['celery', '-A', 'celeryApp.worker', 'flower', '-l', 'info']
+  celeryworker:
+    image: ${DOCKER_IMAGE_CELERYWORKER}:latest
+    depends_on:
+      - db
+      - rabbitmq
+      - redis
+    env_file:
+      - .env
+    environment:
+      - SERVER_NAME=${DOMAIN?Variable not set}
+      - SERVER_HOST=https://${DOMAIN?Variable not set}
+    build:
+      context: ./
+      dockerfile: ./docker/celeryworker.dockerfile
+      args:
+        INSTALL_DEV: ${INSTALL_DEV-false}
 
-#  backend:
-#    image: ${DOCKER_IMAGE_BACKEND}:latest
-#    depends_on:
-#      - db
-#      - rabbitmq
-#      - redis
-#      - celeryworker
-#    env_file:
-#      - .env
-#    environment:
-#      - SERVER_NAME=${DOMAIN?Variable not set}
-#      - SERVER_HOST=https://${DOMAIN?Variable not set}
-#    ports:
-#      - 8100:8100
-#    build:
-#      context: ./
-#      dockerfile: ./docker/backend.dockerfile
-#      args:
-#        INSTALL_DEV: ${INSTALL_DEV-false}
+  celeryflower:
+    image: ${DOCKER_IMAGE_FLOWER}:latest
+    depends_on:
+      - db
+      - rabbitmq
+      - redis
+    ports:
+      - 5555:5555
+    env_file:
+      - .env
+    environment:
+      - SERVER_NAME=${DOMAIN?Variable not set}
+      - SERVER_HOST=https://${DOMAIN?Variable not set}
+    build:
+      context: ./
+      dockerfile: ./docker/celeryworker.dockerfile
+      args:
+        INSTALL_DEV: ${INSTALL_DEV-false}
+    command: ["celery", "-A", "celeryApp.worker", "flower", "-l", "info"]
+
+  backend:
+    image: ${DOCKER_IMAGE_BACKEND}:latest
+    depends_on:
+      - db
+      - rabbitmq
+      - redis
+      - celeryworker
+    env_file:
+      - .env
+    environment:
+      - SERVER_NAME=${DOMAIN?Variable not set}
+      - SERVER_HOST=https://${DOMAIN?Variable not set}
+    ports:
+      - 8100:8100
+    build:
+      context: ./
+      dockerfile: ./docker/backend.dockerfile
+      args:
+        INSTALL_DEV: ${INSTALL_DEV-false}
 
 volumes:
   app-db-data:
