feature: add basic auth with ecdsa

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -33,6 +33,7 @@ pre-commit = "^3.6.0"
 ragatouille = "^0.0.7.post9"
 faiss-cpu = "^1.8.0"
 gdown = "^5.1.0"
+python-multipart = "^0.0.9"
 
 
 [build-system]
