enviroment: update poetry

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -34,6 +34,7 @@ ragatouille = "^0.0.7.post9"
 faiss-cpu = "^1.8.0"
 gdown = "^5.1.0"
 python-multipart = "^0.0.9"
+web3 = "^6.15.1"
 
 
 [build-system]
