--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   db:
     image: postgres:15
+    user: postgres
     volumes:
       - app-db-data:/var/lib/postgresql/data
     env_file:
