--- a/src/celeryApp/pyproject.toml
+++ b/src/celeryApp/pyproject.toml
@@ -17,6 +17,7 @@ alembic = "^1.13.1"
 pydantic = "^2.6.4"
 pydantic-settings = "^2.2.1"
 sqlmodel = "^0.0.16"
+tenacity = "^8.2.3"
 
 
 [build-system]
