--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.9"
 pydantic = {extras = ["email"], version = "^2.5.2"}
 uvicorn = "^0.24.0.post1"
-fastapi = "^0.105.0"
+fastapi = "0.109.1"
 pydantic-settings = "^2.1.0"
 sqlmodel = "^0.0.14"
 loguru = "^0.7.2"
